--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -49,7 +49,8 @@ jobs:
     runs-on:  ubuntu-latest
     needs:  build
     steps:
-    - name: create release
+    - name: Create release
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.github_token }}
