--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -75,3 +75,26 @@ jobs:
         asset_path: ./${{ github.sha }}.zip
         asset_name: source_code_with_libraries.zip
         asset_content_type: application/zip
+  upload:
+    runs-on:  ubuntu-latest
+    needs:  build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: zipped-bundle
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@latest
+        with: 
+          aws-access-key-id:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Upload to S3
+        run:  aws s3 cp ${{ github.sha }}.zip s3://my-uniquebucket0001/${{ github.sha }}.zip
+        
+          
+          
+          
+          
+            
+            
