--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install libraries
+      - name: Install linting libraries
         run: pip install flake8
       - name: Lint with flake8
         run:  |
