--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -96,6 +96,10 @@ jobs:
     runs-on: ubuntu-latest
     needs:  upload
     steps:
+      - name: Install AWS CLI
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y awscli
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with: 
