--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -111,7 +111,8 @@ jobs:
             aws lambda create-function \
             --function-name test-function \
             --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role \
-            --code S3Bucket=my-uniquebucket0001,S3Key=${{ github.sha }}.zip \  
+            --s3-bucket my-uniquebucket0001 \
+            --s3-key ${{ github.sha }}.zip \  
             --handler lambda_function.lambda_handler \
             --runtime python3.9
             
