--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -109,12 +109,7 @@ jobs:
           aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Create test function  
-        run: |  
-            aws lambda create-function --function-name test-function \
-            --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip \ 
-            --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role \
-            --handler lambda_function.lambda_handler --runtime python3.9
-            
+        run: aws lambda create-function --function-name test-function --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role --handler lambda_function.lambda_handler --runtime python3.9
       - name: Wait 30 seconds
         run:  sleep 30
       - name: Destroy test function
