--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -97,6 +97,9 @@ jobs:
     env:
       BUCKET_NAME: my-uniquebucket0001
     needs:  upload
+    strategy:
+      matrix:
+        input: ["Hello", "Hi"]
     steps:
       - name: Install AWS CLI
         run: |
@@ -109,12 +112,18 @@ jobs:
           aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Create test function  
-        run: aws lambda create-function --function-name test-function --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role --handler lambda_function.lambda_handler --runtime python3.9
+        run: aws lambda create-function --function-name test-function-${{ matrix.input }} --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role --handler lambda_function.lambda_handler --runtime python3.9
+      - name: Invoke test function
+        run: |
+          aws lambda invoke --function-name test-function-${{ matrix.input }} --payload $(echo "{\"input\": \"${{ matrix.input }}\"}" | base64) --output json.out
+          if grep - "Error" out; then
+            exit1
+          fi
       - name: Wait 30 seconds
         run:  sleep 30
       - name: Destroy test function
         if: ${{ always() }}
-        run:  aws lambda delete-function --function-name test-function
+        run:  aws lambda delete-function --function-name test-function-${{ matrix.input }}
       
 
   deploy:
