--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -101,7 +101,7 @@ jobs:
       matrix:
         input: ["Hello", "Hi"]
     steps:
-      - name: Install AWS CLI
+      - name: Install AWS Cli
         run: |
             sudo apt-get update
             sudo apt-get install -y awscli
