--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -115,7 +115,7 @@ jobs:
         run: aws lambda create-function --function-name test-function-${{ matrix.input }} --code S3Bucket=${{ env.BUCKET_NAME }},S3Key=${{ github.sha }}.zip --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role --handler lambda_function.lambda_handler --runtime python3.9
       - name: Invoke test function
         run: |
-          aws lambda invoke --function-name test-function-${{ matrix.input }} --payload $(echo "{\"input\": \"${{ matrix.input }}\"}" | base64) --output json.out
+          aws lambda invoke --function-name test-function-${{ matrix.input }} --payload $(echo "{\"input\": \"${{ matrix.input }}\"}" | base64) --output json
           if grep - "Error" out; then
             exit1
           fi
