--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -148,12 +148,13 @@ jobs:
     needs: [deploy]
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONFIG_FILE: mkdocs.yaml
+          EXTRA_PACKAGES: build-base
           
           
             
